Move custom config type classes to better package
Took 7 seconds

Took 46 seconds